--- a/runpod-worker/Dockerfile
+++ b/runpod-worker/Dockerfile
@@ -10,3 +10,5 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY handler.py .
+
+CMD ["python", "-u", "handler.py"]
