RunPod worker: full pipeline (yt-dlp + clip + subtitles + render)

--- a/runpod-worker/Dockerfile
+++ b/runpod-worker/Dockerfile
@@ -13,10 +13,8 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# yt-dlp binario (más fiable que pip)
 RUN curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp \
-    -o /usr/local/bin/yt-dlp \
-    && chmod +x /usr/local/bin/yt-dlp
+    -o /usr/local/bin/yt-dlp && chmod +x /usr/local/bin/yt-dlp
 
 COPY handler.py .
 
