--- a/runpod-worker/Dockerfile
+++ b/runpod-worker/Dockerfile
@@ -4,7 +4,6 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# System deps
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
@@ -18,15 +17,13 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 
 WORKDIR /app
 
-# --- PYTORCH CUDA (CRÍTICO) ---
+# Torch CUDA (estable)
 RUN pip install --upgrade pip && \
     pip install torch --index-url https://download.pytorch.org/whl/cu121
 
-# Requirements
 COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-# App
 COPY handler.py .
 
 CMD ["python", "handler.py"]
