--- a/runpod-worker/Dockerfile
+++ b/runpod-worker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     ffmpeg \
     curl \
-    fonts-liberation \
+    fontconfig \
     ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
@@ -17,12 +17,16 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 
 WORKDIR /app
 
-# PyTorch CUDA 12.1 (compatible con cuDNN 8)
+# Torch CUDA 12.1 (cuDNN 8 compatible)
 RUN pip install --upgrade pip && \
     pip install torch --index-url https://download.pytorch.org/whl/cu121
 
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+
+# Fuentes
+COPY fonts /usr/share/fonts/truetype/custom
+RUN fc-cache -f -v
 
 COPY handler.py .
 
